# Gateway-tools

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  README.pt-br.md  announcements.json  package-lock.json  package.json
.github/workflows/: build-matrix.yml  release.yml
Casks/: cockpit-tools.rb  gateway-tools.rb
crates/gateway-cli/: Cargo.toml
crates/gateway-cli/src/: main.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: lib.rs
docs/: DONATE.en.md  DONATE.md  DONATE.pt-br.md  build-wsl2-ubuntu24.md  false-positive-template.md  release-process.md  release-template.md  ui-audit.md
docs/superpowers/specs/: 2026-04-16-cli-implementation-design.md
scripts/: check_locales.cjs  prepare-tauri.cjs
scripts/release/: preflight.cjs  prepare_updater_signing_key.cjs  publish_github_release_and_cask.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppRuntimeGuard.tsx  TopCenterPromoBanner.tsx
src/hooks/: useProviderAccountsPage.ts
src/locales/: ar.json  cs.json  de.json  en-US.json  en.json  es.json  fr.json  id.json  it.json  ja.json  ko.json  pl.json  pt-br.json  ru.json  tr.json  vi.json  zh-CN.json  zh-tw.json
src/pages/: CodexAccountsPage.tsx  DashboardPage.css  QoderAccountsPage.tsx  SettingsPage.tsx
src/services/: accountTransferService.ts  dataTransferService.ts
src/styles/: base.css  components.css  layout.css
src/utils/: codexExportFormats.ts  updaterReleaseNotes.ts
(+43 files in other folders)
